Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53328

Svg icon engine always uses "Off" version as a fallback option

XMLWordPrintable

    • 109def32cd95af417d1f6a34996140f6aa46b857

      It is inconsistent with normal pixmap engine where same state is checked first. To reproduce try running attached application. On right side is the png version, which falls back to same state. Svg engine always falls back to Normal + Off.

        1. qtbug53328.zip
          14 kB
          Joni Poikelin
        For Gerrit Dashboard: QTBUG-53328
        # Subject Branch Project Status CR V

            poikelin Joni Poikelin
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes