Fix QSvgIconEngine fallback to try icon with same state first

If icon is not explicitly set, QSvgIconEngine always took Normal Off
icon.

Task-number: QTBUG-53328
Change-Id: I404206b0244d0009f7be1f520c2e84c0b7cd3e71
Reviewed-by: Andy Shaw <andy.shaw@theqtcompany.com>
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>